 Conf: Accept hex PIDs as well as human names for log_columns
 Sim Cycle gen: provide pids up to 0x60
 build: Option to use systemwide sqlite3 lib instead of local copy
 Sim: Support protocols with ATSP{A,}{0-9,A-C}, show appropriate headers
 Sim: Add --benchmark option for occasional updates
 Sim: Refactor to simplify main loop
 Sim: Add a timeout for each individual ecu

Version 0.15 (released 2010-06-18)
 Sim: Always return errors in groups of three, padded if necessary
 Logrepair: split repair functions into separate library
 kml: Fix errors that caused some singlevalue plots to not plot
 Sim: Freezeframe [mode 0x02] support
 Logrepair: run PRAGMA integrity_check
 Arch Linux packaging
 Initial add of obd2gpx converter
 kml: Add graph based solely on gps data
 Logger: log course,speed,gpstime from gps

Version 0.14 (released 2010-04-02)
 Sim: gui_fltk has dials instead of input boxes
 obdfft: Show axes ranges on graph, fix CSV parsing issue
 Logger: Bundle up several seconds of updates into single transactions
 Sim: Option to listen on bluetooth
 Logger: Baudrate guesser
 Logger: Baudrate upgrader
 Move obd comms into separate library
 Sim: Multiple ECU support [attach a generator for each ecu]
 Sim: Random,cycle generators don't return values they can't support
 Sim: Support for modes 0x03,0x04
 Sim: Add "Error" data generator
 Sim: gui_fltk now has support for DTCs

Version 0.13 (released 2010-02-27)
 Opensolaris packaging [for jucr]
 Read OBD_CONFIGFILE environment variable for a config file
 Initial add of simple data analysis tool [fourier filter against db columns]
 Logger can redirect stdout/err to a file
 obdsim: Ability to use a real device instead of a pty on unix
 Logger: Add columns to log if tables already existed
 Logger: Create DB with IF NOT EXISTS to reduce warnings
 Logger,Logrepair: Add indexed tripid column to obd and gps tables
 Kml: Use tripids where possible instead of times to key on trips